fixed overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,7 +118,7 @@ body {
 .package-section::after {
   content: "";
   position: absolute;
-  top: 0;
+  top: 5%;
   right: -20%;
   width: 50vw;
   height: 50vw;
